test/cli/test-validating-policy/json-check-dockerfile/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
jsonPayloads:
- payload.json
kind: Test
metadata:
  name: vpol-test-json
policies:
- ./policy.yaml
results:
- kind: ""
  policy: check-dockerfile-disallow-curl
  result: pass
- kind: ""
  policy: check-dockerfile-disallow-wget
  result: fail
